workspace = { members = ["services/wikidata_indexer2"] }
[package]
name = "wikiplain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "wikiplain"
crate-type = ["cdylib"]

[dependencies]
arrow = "34.0.0"
bitflags = "1.3.2"
bzip2 = "0.4.4"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
error-chain = "0.12.4"
lazy_static = "1.4.0"
nom = "7.1.3"
nom-sql = { path = "./vendor/nom-sql" }
parquet = "34.0.0"
pyo3 = "0.18.1"
quick-xml = "0.27.1"
regex = "1.7.1"
