[tool.poetry]
name = "wikiplain"
version = "0.1.0"
description = ""
authors = ["Dylan Burati <dylanburati@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
maturin = "^0.14.15"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]