cabal-version:      2.4
name:               wikiplain
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Dylan Burati
maintainer:         dylanburati@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable wikiplain
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
        xml-conduit ^>=1.9.1.1,
        xml-types ^>=0.3.8,
        conduit ^>=1.3.4.2,
        bytestring ^>=0.10.10.0,
        text ^>=1.2.4.1,
        resourcet ^>=1.2.6,
        pandoc ^>=2.18

    hs-source-dirs:   app
    default-language: Haskell2010
