cabal-version:      2.4
name:               wikiplain
version:            0.1.0.0
synopsis:           Wikimedia dump file manipulation
homepage:
license:            NONE
author:             Dylan Burati
maintainer:         dylanburati@protonmail.com

extra-source-files: CHANGELOG.md

executable wikiplain
    main-is:          Main.hs

    other-modules:    Parse

    build-depends:    base ^>=4.16.4.0,
        conduit ^>=1.3.4.2,
        bytestring ^>=0.11.4.0,
        text ^>=1.2.4.1,
        resourcet ^>=1.2.6,
        random ^>=1.2.1.1,
        attoparsec ^>=0.14.4,
        direct-sqlite ^>=2.3.27,
        conduit-extra ^>=1.3.6,
        mtl ^>=2.3,
        vector ^>=0.12.3.1

    hs-source-dirs:   app
    default-language: Haskell2010

executable wikidump2sqlite
    main-is:          PopulateDb.hs

    -- Modules included in this executable, other than Main.
    other-modules:    PhpUpper

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
        xml-conduit ^>=1.9.1.1,
        xml-types ^>=0.3.8,
        conduit ^>=1.3.4.2,
        bytestring ^>=0.11.4.0,
        text ^>=1.2.4.1,
        resourcet ^>=1.2.6,
        random ^>=1.2.1.1,
        attoparsec ^>=0.14.4,
        direct-sqlite ^>=2.3.27,
        vector ^>=0.12.3.1

    hs-source-dirs:   app
    default-language: Haskell2010
