[package]
name = "pos_tagger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
error-chain = "0.12.4"
serde = { version = "1.0.155", features = ["serde_derive"] }
serde_json = "1.0.94"
