[package]
name = "redditscorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
caches = "0.2.8"
clap = "4.5.4"
crossbeam = "0.8.2"
glob = "0.3.1"
itertools = "0.13.0"
nalgebra = "0.32.5"
pyo3 = { workspace = true }
rayon = "1.10.0"
redis = "0.25.3"
rusqlite = { version = "0.31.0", features = ["array", "bundled", "vtab"] }
rustc-hash = "1.1.0"
serde = { version = "1.0.155", features = ["serde_derive"] }
serde_json = "1.0.94"
simd-json = "0.13.10"
smallvec = { version = "1.11.2", features = ["serde"] }
zstd = { version = "0.13.0", features = ["zstdmt"] }
