[package]
name = "wikidata_indexer2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.17"
error-chain = "0.12.4"
flate2 = { version = "1.0.28", features = ["zlib-ng"], default-features = false }
nom = "7.1.3"
zstd = { version = "0.13.0", features = ["zstdmt"] }
