[package]
name = "wikidata_indexer2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.17"
error-chain = "0.12.4"
flate2 = { version = "1.0.28", features = ["zlib-ng"], default-features = false }
futures = { version = "0.3.1", features = ["std"], default-features = false }
memmap2 = "0.9.4"
nom = "7.1.3"
rand = "0.8.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
soketto = { version = "0.8.0", features = ["deflate"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
zstd = { version = "0.13.0", features = ["zstdmt"] }
